tests/ui/else_if_missing_if.stderr
error: unmatched closing tag `/if`
  --> tests/ui/else_if_missing_if.rs:12:9
   |
12 |         [</if>]
   |         ^^^^^^^
